Remove manual list item endpoint
